New Background images

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -29,13 +29,13 @@
         To start, did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $330 million a year from banner sells alone!
     </p>
     <p>
-        Here is a graph that shows how much money Genshin has made with each verison patch all the way up to 4.0.
+        Here is a graph that shows how much money Genshin has made with each verison patch all the way up to verison 4.0.
     </p>
     <div class="graph-container">
         <canvas id="lineGraph"></canvas>
       </div>
     <p>
-        This would mean that the more time the character has appear in a banner, the more money the character has made overall. Here is are 2 graphs that showcasse the total amount of time that a character has reappear in a banner and the total they money they made since their release.
+        This would mean that the more time the character has appear in a banner, the more money the character has made overall. Here is are 2 graphs that showcasse the total amount of time that a character has reappear in a banner and the total amount of money they made since their release.
     </p>
     <div class="graph-container">
         <canvas id="barGraph1"></canvas>
@@ -73,11 +73,11 @@
         <canvas id="cynoGraph2"></canvas>
       </div>
     <p>
-        This makes sense since the players have more chances trying to get that character, which leads to spending more money since the character banner only lasts for a limited amount of days. 
+        This makes sense since, if players have more chances trying to get a character, they are more likely to spend money because the banners only last a limited amount of days.
     </p>
     <!--How revenue correlates with the abyss usuage number that a character has-->
     <p>
-        Another way that 5-star characters correlates with Genshin Impact's banner revenue, is their usuage rate in Spriral Abyss. Here is a graph that shows the overall aravage abyss usuage rate of each limited 5-star character.
+        Another way that 5-star characters correlates with Genshin Impact's banner revenue, is with their usuage rate in Spriral Abyss. Here is a graph that shows the overall aravage abyss usuage rate of each limited 5-star character.
     </p>
     <div class="graph-container">
         <canvas id="barGraph3"></canvas>
@@ -109,7 +109,14 @@
         <canvas id="eulaGraph2"></canvas>
       </div>
     <p>
-        This makes sense since higher usage rate requires the player to have the character to use it, which means some people would have to spend money to get the character.
+        This makes sense since the character can only have a high usuage rate because players actually have the character to be able to use. This would mean that some people would have to spend money to get that character.
+    </p>
+    <!--How data might vary-->
+    <p>
+        From the analysis that we have done so far, we can also see that both the amount of reappearance a character has on the limited banner, and their Spiral Abyss usuage rate affect their total revenue simultaneously.
+    </p>
+    <p>
+        If we go back and look at Kazuha, we can see that even though Kazuha has
     </p>
     <!--Conclusion-->
     <p>
@@ -129,6 +136,7 @@
 <div class="image-container">
     <img class="Lumine-Idle" src="Lumine_Idle.GIF" alt="Lumine-Idle">
     <img class="Lumine-Run" src="Lumine_Run.GIF" alt="Lumine-Run">
+    <!-- <img class="Lumine-RunR" src="Lumine_Run.GIF" alt="Lumine-Run-Reverse"> -->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="GenshinAnalysis.js"></script>
